# wasi-test

./: Makefile  README.md  devenv.nix
app/: Cargo.toml
app/src/: main.rs
guest-rust/: Cargo.toml
guest-rust/src/: bindings.rs  lib.rs
hello/: Cargo.toml
hello/src/: bindings.rs  lib.rs
hello/wit/: world.wit
host-rust/: Cargo.toml
host-rust/src/: main.rs
wit/: world.wit
